--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jscs": "mdevils/node-jscs",
     "jshint": "2.5.2",
     "less": "1.7.4",
+    "makedrive": "thisandagain/makedrive#client",
     "mocha": "1.21.3",
     "mocha-phantomjs": "3.5.0",
     "node-static": "0.7.4",
